Update title and padding in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       justify-content: center;
       background: radial-gradient(circle at top, #2f80ed, #0f172a);
       color: #f8fafc;
-      padding: 1.5rem;
+      padding: 1rem;
       box-sizing: border-box;
     }
 
@@ -112,7 +112,7 @@
 </head>
 <body>
   <main class="app">
-    <h1>Northbound Loaded Dice</h1>
+    <h1>Loaded Dice</h1>
     <div id="diceDisplay" class="dice-display">–</div>
     <button id="rollButton" type="button">Roll the Dice</button>
     <label for="fixedValue">
